--- a/listings/index.html
+++ b/listings/index.html
@@ -45,6 +45,12 @@
     @media (max-width: 820px){
       .filters-ui .filters-grid{grid-template-columns:1fr}
       .filters-ui .filters-actions .btn{min-width:100%}
+      /* LISTINGS FILTERS — FIX DROPDOWN OPTION VISIBILITY */
+      .filters-ui select.input option{
+        background:#ffffff;
+        color:#0b0f14;
+      }
+
     }
   </style>
 </head>
