--- a/listings/index.html
+++ b/listings/index.html
@@ -116,7 +116,7 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
-            <div class="small muted" style="margin-top:6px">
+            <div class="small muted listing-note">
               Contact details unlock will be available in a future update.
             </div>
           </div>
@@ -132,7 +132,7 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
-            <div class="small muted" style="margin-top:6px">
+            <div class="small muted listing-note">
               Contact details unlock will be available in a future update.
             </div>
           </div>
@@ -148,7 +148,7 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
-            <div class="small muted" style="margin-top:6px">
+            <div class="small muted listing-note">
               Contact details unlock will be available in a future update.
             </div>
           </div>
