--- a/listings/index.html
+++ b/listings/index.html
@@ -1,3 +1,4 @@
+PASTE THIS CODE:
 <!doctype html>
 <html lang="en">
 <head>
@@ -51,58 +52,191 @@
     <p>Premium listings with clean filters + search. Contact details unlock via plans (coming soon).</p>
   </section>
 
-  <div class="grid">
-    <aside class="card">
+  <div class="grid listings-layout" aria-label="Listings with filters">
+    <!-- FILTERS SIDEBAR -->
+    <aside class="card filters-card" aria-label="Filters">
       <div class="card-body filters-ui">
-        <h2>Filters</h2>
-        <div class="hr"></div>
+        <div class="filters-head">
+          <h2>Filters</h2>
 
-        <div class="filters-grid">
-          <label class="field">
-            <span class="small">City</span>
-            <select class="input" id="fCity">
-              <option value="hisar">Hisar</option>
-            </select>
-          </label>
-
-          <label class="field">
-            <span class="small">Property Type</span>
-            <select class="input" id="fType">
-              <option value="">Any</option>
-              <option value="House">House</option>
-              <option value="Shop">Shop</option>
-              <option value="Office">Office</option>
-            </select>
-          </label>
-
-          <label class="field">
-            <span class="small">Area / Sector</span>
-            <input class="input" id="fArea" placeholder="e.g. Sector 14, Model Town" />
-          </label>
-
-          <label class="field">
-            <span class="small">Rent Range</span>
-            <select class="input" id="fRent">
-              <option value="">Any</option>
-              <option value="0-10000">Up to ₹10,000</option>
-              <option value="10001-14999">₹10,001 – ₹14,999</option>
-              <option value="15000-19999">₹15,000 – ₹19,999</option>
-              <option value="20000-25000">₹20,000 – ₹25,000</option>
-              <option value="25001+">Above ₹25,000</option>
-            </select>
-          </label>
-
-          <div class="filters-actions">
-            <button class="btn btn-primary" type="button">Search Properties</button>
+          <div class="filters-head-actions" aria-label="Filter actions">
+            <button class="btn" type="button" id="filtersClearBtn">Clear</button>
+            <button class="btn btn-primary" type="button" id="filtersApplyBtn">Apply</button>
           </div>
+        </div>
+
+        <div class="hr" role="separator" aria-hidden="true"></div>
+
+        <!-- Mobile collapse toggle (CSS/JS next step if needed) -->
+        <button class="btn filters-collapse-btn"
+                type="button"
+                id="filtersCollapseBtn"
+                aria-controls="filtersPanel"
+                aria-expanded="true">
+          Filter Options
+        </button>
+
+        <div id="filtersPanel" class="filters-panel" role="region" aria-label="Filter options">
+          <form id="filtersForm" class="filters-form" autocomplete="off">
+            <!-- Location -->
+            <fieldset class="filter-group">
+              <legend>Location</legend>
+
+              <label class="field" for="fCity">
+                <span class="small">City</span>
+                <select class="input" id="fCity" name="city">
+                  <option value="hisar">Hisar</option>
+                </select>
+              </label>
+
+              <label class="field" for="fArea">
+                <span class="small">Area / Sector</span>
+                <input class="input" id="fArea" name="area" placeholder="e.g. Sector 14, Model Town" />
+              </label>
+            </fieldset>
+
+            <!-- Property -->
+            <fieldset class="filter-group">
+              <legend>Property</legend>
+
+              <label class="field" for="fType">
+                <span class="small">Property Type</span>
+                <select class="input" id="fType" name="type">
+                  <option value="">Any</option>
+                  <option value="House">House</option>
+                  <option value="Flat">Flat</option>
+                  <option value="PG">PG</option>
+                  <option value="Shop">Shop</option>
+                  <option value="Office">Office</option>
+                  <option value="Warehouse">Warehouse</option>
+                </select>
+              </label>
+
+              <label class="field" for="fBhk">
+                <span class="small">BHK Type</span>
+                <select class="input" id="fBhk" name="bhk">
+                  <option value="">Any</option>
+                  <option value="1 RK">1 RK</option>
+                  <option value="1 BHK">1 BHK</option>
+                  <option value="2 BHK">2 BHK</option>
+                  <option value="3 BHK">3 BHK</option>
+                  <option value="4+ BHK">4+ BHK</option>
+                </select>
+              </label>
+
+              <label class="field" for="fAge">
+                <span class="small">Property Age</span>
+                <select class="input" id="fAge" name="age">
+                  <option value="">Any</option>
+                  <option value="0-1">0–1 year</option>
+                  <option value="1-3">1–3 years</option>
+                  <option value="3-5">3–5 years</option>
+                  <option value="5-10">5–10 years</option>
+                  <option value="10+">10+ years</option>
+                </select>
+              </label>
+            </fieldset>
+
+            <!-- Size -->
+            <fieldset class="filter-group">
+              <legend>Size</legend>
+
+              <label class="field" for="fSize">
+                <span class="small">Built-up / Area</span>
+                <select class="input" id="fSize" name="size">
+                  <option value="">Any</option>
+                  <option value="0-500">Up to 500 sq ft</option>
+                  <option value="501-800">501 – 800 sq ft</option>
+                  <option value="801-1200">801 – 1,200 sq ft</option>
+                  <option value="1201-1800">1,201 – 1,800 sq ft</option>
+                  <option value="1801+">Above 1,800 sq ft</option>
+                </select>
+              </label>
+            </fieldset>
+
+            <!-- Rent -->
+            <fieldset class="filter-group">
+              <legend>Rent</legend>
+
+              <label class="field" for="fRent">
+                <span class="small">Rent Range</span>
+                <select class="input" id="fRent" name="rent">
+                  <option value="">Any</option>
+                  <option value="0-10000">Up to ₹10,000</option>
+                  <option value="10001-14999">₹10,001 – ₹14,999</option>
+                  <option value="15000-19999">₹15,000 – ₹19,999</option>
+                  <option value="20000-25000">₹20,000 – ₹25,000</option>
+                  <option value="25001+">Above ₹25,000</option>
+                </select>
+              </label>
+            </fieldset>
+
+            <!-- Amenities -->
+            <fieldset class="filter-group">
+              <legend>Amenities</legend>
+
+              <div class="amenities" role="group" aria-label="Amenities">
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="parking" />
+                  <span>Parking</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="powerBackup" />
+                  <span>Power Backup</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="lift" />
+                  <span>Lift</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="security" />
+                  <span>Security</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="furnished" />
+                  <span>Furnished</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="semiFurnished" />
+                  <span>Semi-Furnished</span>
+                </label>
+
+                <label class="amenity">
+                  <input type="checkbox" name="amenities" value="ac" />
+                  <span>AC</span>
+                </label>
+              </div>
+            </fieldset>
+
+            <div class="filters-footer">
+              <button class="btn btn-primary" type="button" id="filtersSearchBtn">Search Properties</button>
+              <p class="small muted">
+                Tip: Apply filters to refine listings. (Backend integration next.)
+              </p>
+            </div>
+          </form>
         </div>
       </div>
     </aside>
 
-    <section class="card">
+    <!-- LISTINGS -->
+    <section class="card listings-card" aria-label="Listings">
       <div class="card-body">
-        <h2>Listings</h2>
-        <p class="muted">Demo UI (filters are UI-ready; DB integration next).</p>
+        <div class="listings-head">
+          <div>
+            <h2>Listings</h2>
+            <p class="muted">Demo UI (filters are UI-ready; DB integration next).</p>
+          </div>
+
+          <div class="results-meta" aria-label="Results summary">
+            <span class="small muted" id="resultsCount">Showing 3 properties</span>
+          </div>
+        </div>
 
         <div id="listingWrap" class="listings listing-wrap">
           <div class="listing" data-rent="12000">
@@ -154,9 +288,9 @@
           </div>
         </div>
 
-        <div class="hr"></div>
+        <div class="hr" role="separator" aria-hidden="true"></div>
         <div class="notice">
-          Filters + sorting UI is ready. Next step: connect Worker API to fetch real listings + apply filters server-side.
+          Filters UI is ready. Next step: connect Worker API to fetch real listings + apply filters server-side.
         </div>
       </div>
     </section>
