--- a/listings/index.html
+++ b/listings/index.html
@@ -52,7 +52,7 @@ PASTE THIS CODE:
     <p>Premium listings with clean filters + search. Contact details unlock via plans (coming soon).</p>
   </section>
 
-  <div class="grid listings-layout" aria-label="Listings with filters">
+  <div class="listings-page-layout" aria-label="Listings with filters">
     <!-- FILTERS SIDEBAR -->
     <aside class="card filters-card" aria-label="Filters">
       <div class="card-body filters-ui">
