--- a/listings/index.html
+++ b/listings/index.html
@@ -75,11 +75,14 @@ PASTE THIS CODE:
                 aria-expanded="true">
           Filter Options
         </button>
+        <button type="button" class="btn more-filters-btn" id="moreFiltersBtn">
+  + More Filters
+</button>
 
         <div id="filtersPanel" class="filters-panel" role="region" aria-label="Filter options">
           <form id="filtersForm" class="filters-form" autocomplete="off">
             <!-- Location -->
-            <fieldset class="filter-group">
+            <fieldset class="filter-group secondary">
               <legend>Location</legend>
 
               <label class="field" for="fCity">
@@ -96,7 +99,7 @@ PASTE THIS CODE:
             </fieldset>
 
             <!-- Property -->
-            <fieldset class="filter-group">
+            <fieldset class="filter-group secondary">
               <legend>Property</legend>
 
               <label class="field" for="fType">
@@ -138,7 +141,7 @@ PASTE THIS CODE:
             </fieldset>
 
             <!-- Size -->
-            <fieldset class="filter-group">
+            <fieldset class="filter-group secondary">
               <legend>Size</legend>
 
               <label class="field" for="fSize">
@@ -155,7 +158,7 @@ PASTE THIS CODE:
             </fieldset>
 
             <!-- Rent -->
-            <fieldset class="filter-group">
+            <fieldset class="filter-group secondary">
               <legend>Rent</legend>
 
               <label class="field" for="fRent">
@@ -172,7 +175,7 @@ PASTE THIS CODE:
             </fieldset>
 
             <!-- Amenities -->
-            <fieldset class="filter-group">
+            <fieldset class="filter-group secondary">
               <legend>Amenities</legend>
 
               <div class="amenities" role="group" aria-label="Amenities">
