--- a/listings/index.html
+++ b/listings/index.html
@@ -81,7 +81,7 @@
         <div id="filtersPanel" class="filters-panel" role="region" aria-label="Filter options">
           <form id="filtersForm" class="filters-form" autocomplete="off">
             <!-- Location -->
-            <fieldset class="filter-group secondary">
+            <fieldset class="filter-group primary">
               <legend>Location</legend>
 
               <label class="field" for="fCity">
@@ -140,7 +140,7 @@
             </fieldset>
 
             <!-- Size -->
-            <fieldset class="filter-group secondary">
+            <fieldset class="filter-group primary">
               <legend>Size</legend>
 
               <label class="field" for="fSize">
@@ -157,7 +157,7 @@
             </fieldset>
 
             <!-- Rent -->
-            <fieldset class="filter-group secondary">
+            <fieldset class="filter-group primary">
               <legend>Rent</legend>
 
               <label class="field" for="fRent">
@@ -174,7 +174,7 @@
             </fieldset>
 
             <!-- Amenities -->
-            <fieldset class="filter-group secondary">
+            <fieldset class="filter-group primary">
               <legend>Amenities</legend>
 
               <div class="amenities" role="group" aria-label="Amenities">
