--- a/listings/index.html
+++ b/listings/index.html
@@ -83,10 +83,91 @@
               </select>
             </label>
 
-            <label class="field" for="fArea">
-              <span class="small">Area / Sector</span>
-              <input class="input" id="fArea" name="area" placeholder="e.g. Sector 14, Model Town" />
-            </label>
+            <!-- REPLACE Area / Sector FIELD WITH AUTOCOMPLETE (HISAR COMPLETE) -->
+
+<label class="field" for="fArea">
+  <span class="small">Area / Sector</span>
+  <input
+    class="input"
+    id="fArea"
+    name="area"
+    list="hisarAreas"
+    placeholder="Type area / sector (e.g. Sector 14, PLA, New Grain Market)"
+  />
+
+  <datalist id="hisarAreas">
+    <!-- ===== SECTORS ===== -->
+    <option value="Sector 1–4">
+    <option value="Sector 3">
+    <option value="Sector 5">
+    <option value="Sector 9–11">
+    <option value="Sector 13">
+    <option value="Sector 14">
+    <option value="Sector 15">
+    <option value="Sector 16–17">
+    <option value="Sector 24">
+    <option value="Sector MGA">
+    <option value="Sector 27–28">
+    <option value="Sector 33">
+    <option value="Sector PLA">
+
+    <!-- ===== RESIDENTIAL AREAS ===== -->
+    <option value="Model Town">
+    <option value="Model Town Extension">
+    <option value="Housing Board Colony (Sirsa Road)">
+    <option value="Sundar Nagar">
+    <option value="Vikas Nagar">
+    <option value="Preeti Nagar">
+    <option value="Professor Colony">
+    <option value="Aggarwal Colony">
+    <option value="Aggarsain Colony">
+    <option value="Prem Nagar">
+    <option value="Sant Nagar">
+    <option value="Jawahar Nagar">
+    <option value="Shastri Nagar">
+    <option value="Azad Nagar">
+    <option value="Indira Colony">
+    <option value="Adarsh Nagar">
+    <option value="Shanti Nagar">
+    <option value="Vidut Nagar">
+    <option value="Jindal Colony">
+    <option value="Teachers Colony">
+    <option value="Doctors Colony">
+    <option value="Bank Colony">
+    <option value="Police Lines">
+    <option value="Camp Area">
+
+    <!-- ===== COMMERCIAL / MARKET AREAS ===== -->
+    <option value="New Grain Market">
+    <option value="Old Mandi Road">
+    <option value="Nagori Gate">
+    <option value="Main Market">
+    <option value="Rajguru Market">
+    <option value="Auto Market">
+    <option value="Industrial Area">
+    <option value="Industrial Area Phase 1">
+    <option value="Industrial Area Phase 2">
+    <option value="Delhi Road Market">
+    <option value="Hansi Road Market">
+    <option value="Tosham Road Market">
+    <option value="Barwala Road Market">
+    <option value="Railway Road Market">
+    <option value="Bus Stand Area">
+
+    <!-- ===== CHOWKS / LANDMARKS ===== -->
+    <option value="Parav Chowk">
+    <option value="Lahoria Chowk">
+    <option value="Jindal Chowk">
+    <option value="ITI Chowk">
+    <option value="Dabra Chowk">
+
+    <!-- ===== MIXED / OTHER ===== -->
+    <option value="Hisar Cantt Area">
+    <option value="Mirzapur Road">
+    <option value="Airport Road Area">
+    <option value="Other">
+  </datalist>
+</label>
 
             <label class="field" for="fSize">
               <span class="small">Size (<span id="sizeUnitLabel">Sq Yds</span>)</span>
