--- a/listings/index.html
+++ b/listings/index.html
@@ -109,7 +109,7 @@
     <option value="Sector MGA">
     <option value="Sector 27–28">
     <option value="Sector 33">
-    <option value="Sector PLA">
+    <option value="Sector-PLA">
 
     <!-- ===== RESIDENTIAL AREAS ===== -->
     <option value="Model Town">
