--- a/listings/index.html
+++ b/listings/index.html
@@ -1,3 +1,5 @@
+----------------------------
+PASTE THIS CODE:
 <!doctype html>
 <html lang="en">
 <head>
@@ -51,7 +53,7 @@
     <p>Premium listings with clean filters + search. Contact details unlock via plans (coming soon).</p>
   </section>
 
-    <div class="listings-page-layout" aria-label="Listings with filters">
+  <div class="listings-page-layout" aria-label="Listings with filters">
     <form id="filtersForm" class="filters-shell" autocomplete="off">
       <!-- PRIMARY FILTERS (TOP BAR — ALWAYS VISIBLE) -->
       <section class="card primary-filters-card" aria-label="Primary filters">
@@ -75,7 +77,6 @@
             <label class="field" for="fType">
               <span class="small">Property Type</span>
               <select class="input" id="fType" name="type">
-                <!-- default: Residential -->
                 <option value="">Any</option>
                 <option value="House">House</option>
                 <option value="Flat">Flat</option>
@@ -83,131 +84,119 @@
               </select>
             </label>
 
-            <!-- REPLACE Area / Sector FIELD WITH AUTOCOMPLETE (HISAR COMPLETE) -->
+            <label class="field" for="fArea">
+              <span class="small">Area / Sector</span>
 
-<label class="field" for="fArea">
-  <span class="small">Area / Sector</span>
+              <input
+                class="input"
+                id="fArea"
+                name="area"
+                placeholder="Type area / sector (e.g. Sector 14, PLA, New Grain Market)"
+                autocomplete="off"
+                aria-autocomplete="list"
+                aria-expanded="false"
+                aria-controls="areaPanel"
+              />
 
-  <!-- Typeable input (custom dropdown will be controlled by JS) -->
-  <input
-    class="input"
-    id="fArea"
-    name="area"
-    placeholder="Type area / sector (e.g. Sector 14, PLA, New Grain Market)"
-    autocomplete="off"
-    aria-autocomplete="list"
-    aria-expanded="false"
-    aria-controls="areaPanel"
-  />
+              <div id="areaPanel" class="area-panel" hidden>
+                <div class="area-panel-head">
+                  <span class="small muted">Popular areas</span>
+                  <button class="btn" type="button" id="areaExpandBtn">More Areas</button>
+                </div>
 
-  <!-- Custom lightweight dropdown panel (hidden by default; JS will open/expand) -->
-  <div id="areaPanel" class="area-panel" hidden>
-    <div class="area-panel-head">
-      <span class="small muted">Popular areas</span>
-      <button class="btn" type="button" id="areaExpandBtn">More Areas</button>
-    </div>
+                <div class="area-options" role="listbox" aria-label="Area suggestions (Top)">
+                  <button type="button" class="area-opt" data-value="Sector 14">Sector 14</button>
+                  <button type="button" class="area-opt" data-value="Sector 15">Sector 15</button>
+                  <button type="button" class="area-opt" data-value="Sector 13">Sector 13</button>
+                  <button type="button" class="area-opt" data-value="Sector 16–17">Sector 16–17</button>
+                  <button type="button" class="area-opt" data-value="Sector 33">Sector 33</button>
+                  <button type="button" class="area-opt" data-value="Sector-PLA">Sector-PLA</button>
+                  <button type="button" class="area-opt" data-value="New Grain Market">New Grain Market</button>
+                  <button type="button" class="area-opt" data-value="Housing Board Colony (Sirsa Road)">Housing Board Colony (Sirsa Road)</button>
+                  <button type="button" class="area-opt" data-value="Sundar Nagar">Sundar Nagar</button>
+                  <button type="button" class="area-opt" data-value="Vikas Nagar">Vikas Nagar</button>
+                  <button type="button" class="area-opt" data-value="Other">Other</button>
+                </div>
 
-    <div class="area-options" role="listbox" aria-label="Area suggestions (Top)">
-      <button type="button" class="area-opt" data-value="Sector 14">Sector 14</button>
-      <button type="button" class="area-opt" data-value="Sector 15">Sector 15</button>
-      <button type="button" class="area-opt" data-value="Sector 13">Sector 13</button>
-      <button type="button" class="area-opt" data-value="Sector 16–17">Sector 16–17</button>
-      <button type="button" class="area-opt" data-value="Sector 33">Sector 33</button>
-      <button type="button" class="area-opt" data-value="Sector-PLA">Sector-PLA</button>
-      <button type="button" class="area-opt" data-value="New Grain Market">New Grain Market</button>
-      <button type="button" class="area-opt" data-value="Housing Board Colony (Sirsa Road)">Housing Board Colony (Sirsa Road)</button>
-      <button type="button" class="area-opt" data-value="Sundar Nagar">Sundar Nagar</button>
-      <button type="button" class="area-opt" data-value="Vikas Nagar">Vikas Nagar</button>
-      <button type="button" class="area-opt" data-value="Other">Other</button>
-    </div>
+                <div id="areaAllWrap" hidden>
+                  <div class="hr" role="separator" aria-hidden="true"></div>
+                  <span class="small muted">All areas</span>
+                  <div id="areaAllOptions" class="area-options" role="listbox" aria-label="Area suggestions (All)"></div>
+                </div>
+              </div>
 
-    <!-- Full list container (JS will populate from datalist below when expanded) -->
-    <div id="areaAllWrap" hidden>
-      <div class="hr" role="separator" aria-hidden="true"></div>
-      <span class="small muted">All areas</span>
-      <div id="areaAllOptions" class="area-options" role="listbox" aria-label="Area suggestions (All)"></div>
-    </div>
-  </div>
+              <datalist id="hisarAreas">
+                <option value="Sector 1–4">
+                <option value="Sector 3">
+                <option value="Sector 5">
+                <option value="Sector 9–11">
+                <option value="Sector 13">
+                <option value="Sector 14">
+                <option value="Sector 15">
+                <option value="Sector 16–17">
+                <option value="Sector 24">
+                <option value="Sector MGA">
+                <option value="Sector 27–28">
+                <option value="Sector 33">
+                <option value="Sector-PLA">
 
-  <!-- Data source (keep as-is, JS will read from this list) -->
-  <datalist id="hisarAreas">
-    <!-- ===== SECTORS ===== -->
-    <option value="Sector 1–4">
-    <option value="Sector 3">
-    <option value="Sector 5">
-    <option value="Sector 9–11">
-    <option value="Sector 13">
-    <option value="Sector 14">
-    <option value="Sector 15">
-    <option value="Sector 16–17">
-    <option value="Sector 24">
-    <option value="Sector MGA">
-    <option value="Sector 27–28">
-    <option value="Sector 33">
-    <option value="Sector-PLA">
+                <option value="Model Town">
+                <option value="Model Town Extension">
+                <option value="Housing Board Colony (Sirsa Road)">
+                <option value="Sundar Nagar">
+                <option value="Vikas Nagar">
+                <option value="Preeti Nagar">
+                <option value="Professor Colony">
+                <option value="Aggarwal Colony">
+                <option value="Aggarsain Colony">
+                <option value="Prem Nagar">
+                <option value="Sant Nagar">
+                <option value="Jawahar Nagar">
+                <option value="Shastri Nagar">
+                <option value="Azad Nagar">
+                <option value="Indira Colony">
+                <option value="Adarsh Nagar">
+                <option value="Shanti Nagar">
+                <option value="Vidut Nagar">
+                <option value="Jindal Colony">
+                <option value="Teachers Colony">
+                <option value="Doctors Colony">
+                <option value="Bank Colony">
+                <option value="Police Lines">
+                <option value="Camp Area">
 
-    <!-- ===== RESIDENTIAL AREAS ===== -->
-    <option value="Model Town">
-    <option value="Model Town Extension">
-    <option value="Housing Board Colony (Sirsa Road)">
-    <option value="Sundar Nagar">
-    <option value="Vikas Nagar">
-    <option value="Preeti Nagar">
-    <option value="Professor Colony">
-    <option value="Aggarwal Colony">
-    <option value="Aggarsain Colony">
-    <option value="Prem Nagar">
-    <option value="Sant Nagar">
-    <option value="Jawahar Nagar">
-    <option value="Shastri Nagar">
-    <option value="Azad Nagar">
-    <option value="Indira Colony">
-    <option value="Adarsh Nagar">
-    <option value="Shanti Nagar">
-    <option value="Vidut Nagar">
-    <option value="Jindal Colony">
-    <option value="Teachers Colony">
-    <option value="Doctors Colony">
-    <option value="Bank Colony">
-    <option value="Police Lines">
-    <option value="Camp Area">
+                <option value="New Grain Market">
+                <option value="Old Mandi Road">
+                <option value="Nagori Gate">
+                <option value="Main Market">
+                <option value="Rajguru Market">
+                <option value="Auto Market">
+                <option value="Industrial Area">
+                <option value="Industrial Area Phase 1">
+                <option value="Industrial Area Phase 2">
+                <option value="Delhi Road Market">
+                <option value="Hansi Road Market">
+                <option value="Tosham Road Market">
+                <option value="Barwala Road Market">
+                <option value="Railway Road Market">
+                <option value="Bus Stand Area">
 
-    <!-- ===== COMMERCIAL / MARKET AREAS ===== -->
-    <option value="New Grain Market">
-    <option value="Old Mandi Road">
-    <option value="Nagori Gate">
-    <option value="Main Market">
-    <option value="Rajguru Market">
-    <option value="Auto Market">
-    <option value="Industrial Area">
-    <option value="Industrial Area Phase 1">
-    <option value="Industrial Area Phase 2">
-    <option value="Delhi Road Market">
-    <option value="Hansi Road Market">
-    <option value="Tosham Road Market">
-    <option value="Barwala Road Market">
-    <option value="Railway Road Market">
-    <option value="Bus Stand Area">
+                <option value="Parav Chowk">
+                <option value="Lahoria Chowk">
+                <option value="Jindal Chowk">
+                <option value="ITI Chowk">
+                <option value="Dabra Chowk">
 
-    <!-- ===== CHOWKS / LANDMARKS ===== -->
-    <option value="Parav Chowk">
-    <option value="Lahoria Chowk">
-    <option value="Jindal Chowk">
-    <option value="ITI Chowk">
-    <option value="Dabra Chowk">
-
-    <!-- ===== MIXED / OTHER ===== -->
-    <option value="Hisar Cantt Area">
-    <option value="Mirzapur Road">
-    <option value="Airport Road Area">
-    <option value="Other">
-  </datalist>
-</label>
+                <option value="Hisar Cantt Area">
+                <option value="Mirzapur Road">
+                <option value="Airport Road Area">
+                <option value="Other">
+              </datalist>
+            </label>
 
             <label class="field" for="fSize">
               <span class="small">Size (<span id="sizeUnitLabel">Sq Yds</span>)</span>
               <select class="input" id="fSize" name="size">
-                <!-- default: Residential (Sq Yds) -->
                 <option value="">Any</option>
                 <option value="0-50">Up to 50 sq yds</option>
                 <option value="51-100">51 – 100 sq yds</option>
@@ -255,7 +244,6 @@
             </button>
 
             <div class="filters-panel" role="region" aria-label="Secondary filter options">
-              <!-- RESIDENTIAL SECONDARY -->
               <fieldset class="filter-group secondary" data-cat="residential">
                 <legend>Residential</legend>
 
@@ -331,7 +319,6 @@
                 </div>
               </fieldset>
 
-              <!-- COMMERCIAL SECONDARY -->
               <fieldset class="filter-group secondary" data-cat="commercial">
                 <legend>Commercial</legend>
 
@@ -504,6 +491,7 @@
       ];
 
       function setOptions(selectEl, items) {
+        if (!selectEl) return;
         selectEl.innerHTML = "";
         items.forEach(function (it) {
           var o = document.createElement("option");
@@ -525,12 +513,12 @@
         if (v === "commercial") {
           setOptions(type, comTypes);
           setOptions(size, sizeCom);
-          sizeUnit.textContent = "Sq Ft";
+          if (sizeUnit) sizeUnit.textContent = "Sq Ft";
           setSecondaryVisibility("commercial");
         } else {
           setOptions(type, resTypes);
           setOptions(size, sizeRes);
-          sizeUnit.textContent = "Sq Yds";
+          if (sizeUnit) sizeUnit.textContent = "Sq Yds";
           setSecondaryVisibility("residential");
         }
       }
@@ -572,3 +560,4 @@
 <script src="/assets/app.js"></script>
 </body>
 </html>
+----------------------------
